fix weird issue with text alignment of the header link in mobile screens

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -150,7 +150,7 @@ a.link {
 
   .link {
     font-size: 0.7rem;
-    margin: 0;
+    margin: 0 !important;
   }
 
   .nav-link:hover {
